<resources>
    <string name="app_name">Astro</string>
    <string name="konfiguracja">Konfiguracja</string>
    <string name="Apka">Apka</string>
    <string name="Lattitude">Szerekosc</string>
    <string name="Longitude">Długość</string>
    <string name="RefreshRate">Odśw(s)</string>
    <string name="Accept">Accept</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string-array name="temperature">
        <item>c</item>
        <item>f</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_simple_fragment">SimpleFragment</string>
    <string name="condition">Temperature</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="temperatureText">Temp Unit</string>
    <string name="Pressure">Cisnienie</string>
    <string name="MapList">listaMiast</string>
    <string name="day">day</string>
    <string name="high">high</string>
    <string name="low">low</string>
    <string name="condition_icon">Condition_icon</string>
    <string name="title_activity_advanced_fragment">advancedFragment</string>
</resources>
