<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AstroWeather"
        android:id="@+id/tvAppName"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"


        />

   <Button
       android:layout_width="@dimen/width"
       android:layout_height="wrap_content"
       android:text="@string/konfiguracja"
       android:id="@+id/btKonfiguracja"
       android:layout_below="@id/tvAppName"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="@dimen/marginTop"
       android:onClick="click"


       />



    <Button
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:text="@string/Apka"
        android:id="@+id/btApka"
        android:layout_below="@id/btKonfiguracja"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:onClick="click"
        />
    <Button
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:text="@string/MapList"
        android:id="@+id/btMapList"
        android:layout_below="@id/btApka"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:onClick="click"


        />

</RelativeLayout>